# effective-software-testing

./: .gitignore  README.md  pyproject.toml
chap_01/: _01_planning_poker.py  _01_planning_poker_test.py
